--- a/classes.html
+++ b/classes.html
@@ -22,7 +22,7 @@
         </div>
 
         <section class="cards">
-            <div class="card">
+            <div class="card" id="2DJtGCesOr4">
                 <div class="card-image-container">
                     <img src="http://i3.ytimg.com/vi/2DJtGCesOr4/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -34,7 +34,7 @@
                     <p class="card-price">Free</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="P65RJTTqkN4">
                 <div class="card-image-container">
                     <img src="https://img.youtube.com/vi/P65RJTTqkN4/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -46,7 +46,7 @@
                     <p class="card-price">Free</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="C8TrGTgvLkc">
                 <div class="card-image-container">
                     <img src="https://img.youtube.com/vi/C8TrGTgvLkc/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -58,7 +58,7 @@
                     <p class="card-price">Free</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="3t78tTWt-JY">
                 <div class="card-image-container">
                     <img src="https://img.youtube.com/vi/3t78tTWt-JY/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -70,7 +70,7 @@
                     <p class="card-price">Free</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="tjgCJgm8K3A">
                 <div class="card-image-container">
                     <img src="https://img.youtube.com/vi/tjgCJgm8K3A/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -82,7 +82,7 @@
                     <p class="card-price">Free</p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="HN1UjzRSdBk">
                 <div class="card-image-container">
                     <img src="https://img.youtube.com/vi/HN1UjzRSdBk/maxresdefault.jpg" alt="Video Aula">
                 </div>
@@ -96,13 +96,13 @@
             </div>
         </section>
 
-        <div class="modal-overlay active">
+        <div class="modal-overlay">
             <div class="modal">
                 <a class="close-modal">
                     <i class="material-icons">close</i>
                 </a>
                 <div class="modal-content">
-
+                    <iframe src="" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
